@@ -7,6 +7,7 @@ Version 1.0.3
 * Backport some compiler warning fixes from trunk
 * Don't require DIFX_VERSION to be set
 * Check that all supplied antenna, source, scan and mode names are in vex file
+* Huge speed-up by not constantly sorting events
 
 Version 1.0.2
 ~~~~~~~~~~~~~
